Add csv upload for creating initial parking slots and entrance
