# backend/swagger/v1/swagger.yaml
@@ -199,6 +199,37 @@ paths:
                   type: number
               required:
               - ticket_id
+  "/api/v1/parking_lots/{parking_lot_id}/create_parking_slots":
+    post:
+      summary: Upload csv to populate parking slots
+      tags:
+      - Parking Slots
+      parameters:
+        - in: path 
+          name: parking_lot_id
+          required: true
+          description: ID of the parking_lot
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                parking_slots_file:
+                  type: string
+                  format: binary
+      responses:
+        '200':
+          description: parking_lot found
+        '404':
+          description: parking_lot not found
+        '422':
+          description: Unprocessable Entity
+        '401':
+          description: unauthorized
 servers:
 - url: http://{defaultHost}
   variables:
